[gd_scene load_steps=3 format=3 uid="uid://d2knmnv0vrvu0"]

[ext_resource type="PackedScene" uid="uid://b3cdeafs562yx" path="res://Player/player.tscn" id="1_51www"]
[ext_resource type="Script" path="res://party.gd" id="1_jsqdl"]

[node name="Party" type="Node2D"]
script = ExtResource("1_jsqdl")

[node name="Player" parent="." instance=ExtResource("1_51www")]

[connection signal="arrow_moving" from="Player" to="." method="_on_player_arrow_moving"]
[connection signal="enemy_attacking" from="Player" to="." method="_on_player_enemy_attacking"]
[connection signal="magic_moving" from="Player" to="." method="_on_player_magic_moving"]
